# fast-captcha

./: .gitignore  .pre-commit-config.yaml  README.MD  README.md  pdm.toml  pyproject.toml  requirements.txt
fast_captcha/: __init__.py  img_captcha.py  text_captcha.py
tests/: test_img_captcha.py  test_text_captcha.py
