[tool.poetry]
name = "fast_captcha"
version = "0.1.3"
description = "fast to use captcha"
authors = ["wu <jianhengwu0407@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitee.com/wu_cl/fast_captcha"
repository = "https://gitee.com/wu_cl/fast_captcha"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
