[project]
name = "fast_captcha"
version = "0.2.1"
description = "Fast to use captcha"
authors = [
    { name = "Wu Clan", email = "jianhengwu0407@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "Pillow>=10.0.0",
]

[project.urls]
homepage = "https://github.com/wu-clan/fast_captcha"
repository = "https://github.com/wu-clan/fast_captcha"

[tool.pdm.dev-dependencies]
test = [
    "pytest<8.0.0,>=7.0.0",
    "pre-commit>=2.21.0",
]
lint = [
    "black>=23.3.0",
    "ruff>=0.0.289",
]

[tool.ruff]
line-length = 120
cache-dir = "./.ruff_cache"

[tool.ruff.isort]
lines-between-types = 1
order-by-type = true

[tool.black]
color = true
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
